# babble

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  package.py.in  run_tests.py
.github/workflows/: build-and-test.yml
bbl/: CMakeLists.txt
bbl-build-rs/: Cargo.toml
bbl-build-rs/src/: lib.rs
bbl/cmake/: babble-config.cmake.in  babble-functions.cmake  babble-test-config.cmake  babbleConfig.cmake.in
bbl/include/: babble  babble-std  bbl-c.h  bbl-capi.h  bbl-capi.hpp  bbl-context.h  bbl-context.hpp  bbl-detail.h  bbl-detail.hpp  bbl-plugin.h  bbl.h  bbl_detail.h
bbl/src/: astutil.cpp  astutil.hpp  bbl-c.cpp  bbl-c.hpp  bbl-genbind.cpp  bbl-translate.cpp  bbl.cpp  bbl.hpp  bblfmt.hpp  c_api.cpp  capi.cpp  capi.hpp  cpp_api.cpp  cpp_context.cpp  cpp_context.hpp  expr.hpp  matchers.cpp  matchers.hpp  plugin.cpp  plugin.hpp
bbl/src/api/: api_capi.cpp  api_cpp_context.cpp
example/usd/: usd-c.cpp  usd-c.h
plugins/: CMakeLists.txt
plugins/rust/: CMakeLists.txt  bbl-rust.cpp
test/: test001.cpp  test002.cpp  test003.cpp  test004.cpp  test005.cpp  test006.cpp  test007.cpp  test008.cpp  test009.cpp  test010.cpp  test011.cpp  test012.cpp  test013.cpp  test014.cpp  test015.cpp  test016.cpp  test017.cpp  test018.cpp  test019.cpp  test020.cpp  test021.cpp  test022.cpp  test023.cpp  test024.cpp  test025a.cpp  test025b.cpp  test026.cpp  test027.cpp  test028.cpp  test029.cpp  test030.cpp  test031.cpp  test032.cpp  test033.cpp  test034.cpp  test035.cpp  test036.cpp  test037.cpp  test038.cpp  test039.cpp  (+11 more)
test/bbl-usd/: CMakeLists.txt  bind.cpp  bind_ar.cpp  bind_pcp.cpp  bind_sdf.cpp  bind_std.cpp  bind_tf.cpp  bind_usd.cpp  bind_vt.cpp  usd-c-test01.c  usd-c-test01.cpp
test/bbl-usd/bind/: gf.cpp  pcp.cpp  sdf.cpp  std.cpp  tf.cpp  vt.cpp
test/bbl-usd/bind/usd/: geom.cpp  prim.cpp  usd.cpp
test/inheritance/: CMakeLists.txt  bind.cpp  inheritance.hpp  test_inheritance.cpp
test/ref/: test001.cpp  test001.h  test002.cpp  test002.h  test003.cpp  test003.h  test004.cpp  test004.h  test005.cpp  test005.h  test006.cpp  test006.h  test007.cpp  test007.h  test008.cpp  test008.h  test009.cpp  test009.h  test011.cpp  test011.h  test012.cpp  test012.h  test013.cpp  test013.h  test014.cpp  test014.h  test015.cpp  test015.h  test016.cpp  test016.h  test017.cpp  test017.h  test018.cpp  test018.h  test019.cpp  test019.h  test021.cpp  test021.h  test022.cpp  test022.h  (+16 more)
test/ref/linux/: test001-c.h  test002-c.cpp  test003-c.cpp  test004-c.cpp  test004-c.h  test006-c.cpp  test006-c.h  test007-c.cpp  test007-c.h  test008-c.cpp  test008-c.h  test009-c.cpp  test009-c.h  test011-c.cpp  test011-c.h  test012-c.cpp  test012-c.h  test013-c.cpp  test014-c.cpp  test014-c.h  test015-c.cpp  test016-c.cpp  test019-c.cpp  test019-c.h  test021-c.h  test022-c.cpp  test022-c.h  test023-c.cpp  test024-c.cpp  test024-c.h  test026-c.cpp  test026-c.h  test027-c.cpp  test027-c.h  test028-c.cpp  test028-c.h  test029-c.cpp  test030-c.cpp  test030-c.h  test031-c.h  (+21 more)
test/ref/windows/: test001-c.cpp  test001-c.h  test002-c.cpp  test002-c.h  test003-c.cpp  test003-c.h  test004-c.cpp  test005-c.cpp  test005-c.h  test006-c.cpp  test007-c.cpp  test008-c.cpp  test008-c.h  test009-c.cpp  test009-c.h  test012-c.cpp  test013-c.cpp  test013-c.h  test014-c.cpp  test015-c.cpp  test015-c.h  test016-c.cpp  test016-c.h  test017-c.cpp  test017-c.h  test018-c.cpp  test018-c.h  test019-c.cpp  test019-c.h  test021-c.cpp  test022-c.cpp  test023-c.cpp  test023-c.h  test024-c.cpp  test026-c.cpp  test026-c.h  test027-c.cpp  test027-c.h  test028-c.cpp  test029-c.h  (+27 more)
test/smartptr/: CMakeLists.txt  bind.cpp  smartptr.hpp  test_smartptr.cpp
test/stdfunction/: CMakeLists.txt  bind.cpp  stdfunction.hpp  test_stdfunction.cpp
